plugins {
    id 'java'
    id 'org.springframework.boot' version '2.2.2.RELEASE'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id 'io.franzbecker.gradle-lombok' version '1.14'
}

group 'com.epam.ms'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.14

repositories {
    mavenCentral()
}

lombok {
    version = '1.18.4'
    sha256 = ""
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '5.5.2'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    implementation 'org.liquibase:liquibase-core'
    implementation 'org.mongodb:mongo-java-driver'
    implementation 'org.springframework.data:spring-data-mongodb'
    implementation 'org.springframework.amqp:spring-rabbit'
    runtime group: 'org.springframework.cloud', name: 'spring-cloud-dependencies', version: 'Hoxton.SR7', ext: 'pom'
    //compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.4.7.RELEASE'
    compile group: 'io.github.openfeign', name: 'feign-okhttp', version: '11.0'
    compile group: 'io.github.openfeign', name: 'feign-gson', version: '11.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
}

test {
    useJUnitPlatform()
}
